Changes for Ubuntu

--- a/code/cpp/glog/Makefile
+++ b/code/cpp/glog/Makefile
@@ -36,8 +36,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = i386-apple-darwin12.5.0
-host_triplet = i386-apple-darwin12.5.0
+build_triplet = x86_64-unknown-linux-gnu
+host_triplet = x86_64-unknown-linux-gnu
 
 # These are good warnings to turn on by default
 am__append_1 = -Wall -Wwrite-strings -Woverloaded-virtual -Wno-sign-compare
@@ -335,7 +335,7 @@ AR = ar
 AUTOCONF = ${SHELL} /development/echomesh/code/cpp/glog/missing --run autoconf
 AUTOHEADER = ${SHELL} /development/echomesh/code/cpp/glog/missing --run autoheader
 AUTOMAKE = ${SHELL} /development/echomesh/code/cpp/glog/missing --run automake-1.11
-AWK = awk
+AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
@@ -344,25 +344,25 @@ CPPFLAGS =
 CXX = clang++
 CXXCPP = clang++ -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -arch x86_64 -O2 -std=c++11 -stdlib=libc++
+CXXFLAGS = -arch x86_64 -O2
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
 DLLTOOL = false
-DSYMUTIL = dsymutil
+DSYMUTIL = 
 DUMPBIN = 
-ECHO_C = \c
-ECHO_N = 
+ECHO_C = 
+ECHO_N = -n
 ECHO_T = 
-EGREP = /usr/bin/grep -E
+EGREP = /bin/grep -E
 EXEEXT = 
-FGREP = /usr/bin/grep -F
+FGREP = /bin/grep -F
 GFLAGS_CFLAGS = 
 GFLAGS_LIBS = 
 GMOCK_CFLAGS = 
 GMOCK_CONFIG = 
 GMOCK_LIBS = 
-GREP = /usr/bin/grep
+GREP = /bin/grep
 GTEST_CFLAGS = 
 GTEST_CONFIG = 
 GTEST_LIBS = 
@@ -371,25 +371,25 @@ INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-LD = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/ld
+LD = /usr/bin/ld -m elf_x86_64
 LDFLAGS = 
 LIBOBJS = 
 LIBS = -lpthread 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIBTOOL_DEPS = ./ltmain.sh
-LIPO = lipo
+LIPO = 
 LN_S = ln -s
 LTLIBOBJS = 
 MAKEINFO = ${SHELL} /development/echomesh/code/cpp/glog/missing --run makeinfo
 MANIFEST_TOOL = :
 MINGW_CFLAGS = 
-MKDIR_P = ./install-sh -c -d
-NM = /usr/bin/nm
-NMEDIT = nmedit
-OBJDUMP = false
+MKDIR_P = /bin/mkdir -p
+NM = /usr/bin/nm -B
+NMEDIT = 
+OBJDUMP = objdump
 OBJEXT = o
-OTOOL = otool
-OTOOL64 = :
+OTOOL = 
+OTOOL64 = 
 PACKAGE = glog
 PACKAGE_BUGREPORT = opensource@google.com
 PACKAGE_NAME = glog
@@ -399,12 +399,12 @@ PACKAGE_URL =
 PACKAGE_VERSION = 0.3.3
 PATH_SEPARATOR = :
 PTHREAD_CC = gcc
-PTHREAD_CFLAGS = -D_THREAD_SAFE 
+PTHREAD_CFLAGS = -pthread
 PTHREAD_LIBS = 
 RANLIB = ranlib
-SED = /usr/bin/sed
+SED = /bin/sed
 SET_MAKE = 
-SHELL = /bin/sh
+SHELL = /bin/bash
 STRIP = strip
 UNWIND_LIBS = 
 VERSION = 0.3.3
@@ -439,22 +439,22 @@ am__quote =
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
-build = i386-apple-darwin12.5.0
+build = x86_64-unknown-linux-gnu
 build_alias = 
-build_cpu = i386
-build_os = darwin12.5.0
-build_vendor = apple
+build_cpu = x86_64
+build_os = linux-gnu
+build_vendor = unknown
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = $(prefix)/share/doc/$(PACKAGE)-$(VERSION)
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = i386-apple-darwin12.5.0
+host = x86_64-unknown-linux-gnu
 host_alias = 
-host_cpu = i386
-host_os = darwin12.5.0
-host_vendor = apple
+host_cpu = x86_64
+host_os = linux-gnu
+host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
@@ -464,7 +464,7 @@ libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
 mandir = ${datarootdir}/man
-mkdir_p = $(top_builddir)/./install-sh -c -d
+mkdir_p = /bin/mkdir -p
 oldincludedir = /usr/include
 pdfdir = ${docdir}
 prefix = /development/echomesh/code/cpp/build
