--- a/data/master/score/animation-prevents-quit.yml
+++ b/data/master/score/animation-prevents-quit.yml
@@ -3,7 +3,7 @@ type: sequence
 pattern:
   an animation:
     type: animation
-    filename: "/Volumes/Zog/Documents/animated gifs/rainbow triangle tunnel 2.gif"
+    filename: "/development/echomesh/asset/image/rainbow triangle tunnel.gif"
     x: 32
     y: 32
     stretch: true
