--- a/data/master/score/scroll.yml
+++ b/data/master/score/scroll.yml
@@ -4,15 +4,11 @@ pattern:
   scrolling:
     type: scroll
     wrap: true
-    smooth: true
+    smooth: false
     dx: system.elapsed
     pattern:
-      type: animation
-      filename: "/Volumes/Zog/Documents/animated gifs/spinning sparks.gif"
-      x: 32
-      y: 32
-      stretch: true
-      frame: system.elapsed * 12
+      type: list
+      colors: [[red, white, blue], [green, yellow, pink]]
 
 elements:
   -
